<resources>
    <string name="app_name">Super Ganga Hunter</string>
    <string name="hint_title">¿Que gangota es?</string>
    <string name="hint_price">Precio $$$</string>
    <string name="label_ganga">El ofertón es...</string>
    <string name="label_details">Más información...</string>
    <string name="hint_place">¿Dooondeee?</string>
    <string name="title_date_picker">Selecciona la fecha</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_add">Nueva ganga</string>
</resources>
